kubernetes/apps/synt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synt
  namespace: apps
  labels:
    app: synt
spec:
  selector:
    app: synt
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
